<resources>
    <string name="app_name">SOPT</string>
    <string name="test_text">스크롤 테스트 내려주세요 스크롤 테스트</string>
    <string name="id_text">아이디</string>
    <string name="id_hint">아이디를 입력해주세요.</string>
    <string name="password_text">비밀번호</string>
    <string name="password_hint">비밀번호를 입력해주세요.</string>
    <string name="name_text">이름</string>
    <string name="name_hint">이름을 입력해주세요.</string>
    <string name="login_text">로그인</string>
    <string name="sign_up_text">회원가입</string>
    <string name="sign_up_finish_text">회원가입 완료</string>
    <string name="sign_in_auto_login">자동 로그인</string>

    <string name="empty_name_msg">이름을 입력해주세요</string>
    <string name="empty_id_msg">아이디를 입력해주세요</string>
    <string name="empty_password_msg">비밀번호를 입력해주세요</string>
    <string name="invalid_id_msg">유효한 아이디를 입력해주세요</string>
    <string name="invalid_password_msg">유효한 비밀번호를 입력해주세요</string>
    <string name="invalid_name_msg">유효한 이름을 입력해주세요</string>

    <string name="home_name">이름: 강원용</string>
    <string name="home_age">나이: 23</string>
    <string name="home_mbti">MBTI: ISTJ</string>
    <string name="home_follower_btn">Follower</string>
    <string name="home_repository_btn">Repository</string>

    <string name="null_des">null</string>

    <string name="profile_menu_text">Profile</string>
    <string name="home_menu_text">Home</string>
    <string name="camera_menu_text">Camera</string>

    <string name="github_tv">Github</string>
    <string name="wait_tv">준비중입니다</string>

    <string name="camera_tv">사진을 첨부해주세요</string>
    <string name="camera_btn">첨부하기</string>

    <string name="setting_auto_login">자동 로그인 해제</string>
    <string name="setting_dialog_positive">해제</string>
    <string name="setting_dialog_text">자동 로그인을 해제하시겠습니까?</string>
    <string name="setting_auto_tb">환경설정</string>

    <string-array name="tab_layout_items">
        <item>팔로잉</item>
        <item>팔로워</item>
    </string-array>
</resources>