<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.sopt_seminar.ui.viewmodel.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            tools:context="com.example.sopt_seminar.ui.SignUpFragment">

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="@string/sign_up_text"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_input_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/name_text"
                android:textAppearance="@style/common_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/sign_up_name_et"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />

            <EditText
                android:id="@+id/sign_up_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={vm.nameText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_input_text" />

            <TextView
                android:id="@+id/id_input_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/id_text"
                android:textAppearance="@style/common_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/sign_up_id_et"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_name_et" />

            <EditText
                android:id="@+id/sign_up_id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={vm.idText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_input_text" />

            <TextView
                android:id="@+id/password_input_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/password_text"
                android:textAppearance="@style/common_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_id_et" />

            <EditText
                android:id="@+id/sign_up_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={vm.pwText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_input_text" />

            <Button
                android:id="@+id/sign_up_clear_btn"
                errorMsg="@{vm.errorMsg}"
                isError="@{vm.isError}"
                android:onClick="@{()->vm.checkInput()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/sign_up_finish_text"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_password_et"
                app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_password_et" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
