<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragmentManager"
            type="androidx.fragment.app.FragmentManager" />

        <variable
            name="follower"
            type="com.example.sopt_seminar.ui.FollowerFragment" />

        <variable
            name="repo"
            type="com.example.sopt_seminar.ui.RepoFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.sopt_seminar.ui.HomeFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/kang"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/home_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/home_age"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/user_name"
                app:layout_constraintStart_toStartOf="@+id/user_name"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <TextView
                android:id="@+id/user_mbti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/home_mbti"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/user_age"
                app:layout_constraintStart_toStartOf="@+id/user_age"
                app:layout_constraintTop_toBottomOf="@+id/user_age" />

            <Button
                android:id="@+id/follower_btn"
                childFragment="@{follower}"
                fragmentManger="@{fragmentManager}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/home_follower_btn"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/user_mbti"
                app:layout_constraintTop_toBottomOf="@+id/user_mbti" />

            <Button
                android:id="@+id/repo_btn"
                childFragment="@{repo}"
                fragmentManger="@{fragmentManager}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/home_repository_btn"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/user_mbti"
                app:layout_constraintTop_toBottomOf="@+id/user_mbti" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/home_fragment_cv"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/follower_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
